<resources>
    <string name="app_name">Vent Ford</string>
    <string name="categoriaExclusivos">Perfumes Exclusivos</string>
    <string name="nombreProducto">Perfume</string>
    <string name="precioProducto">$120.000</string>
    <string name="categoriaMasVendidos">Más vendidos</string>
    <string name="añadir">Añadir</string>
    <string name="descuento">-%50</string>
    <string name="descripcionProducto">Lume, un toque exclusivo y elegante que te acompañará todo tu día.</string>
    <string name="estiloProducto1">Amaderado</string>
    <string name="estiloSeparador"> | </string>
    <string name="estiloProducto2">Exclusivo</string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="panelAdmin">Panel de Admin</string>
    <string name="pedidosGrafica">Pedidos</string>
    <string name="ingresosGrafica">Ingresos</string>
    <string name="usuariosGrafica">Usuarios</string>
    <string name="gestionProductos">Gestión Productos</string>
    <string name="productosGrafica">Productos</string>
    <string name="gestionPedidos">Gestión Pedidos</string>
    <string name="gestionUsuarios">Gestión Usuarios</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="categoriaAromaFresco">Aroma Fresco</string>
    <string name="stockProducto">Stock: 20</string>
    <string name="editar">Editar</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="categoria">Categoría</string>
    <string name="cantidad">Cantidad</string>
    <string name="descripcion">Descripción</string>
    <string name="descuentoText">Descuento</string>
    <string name="descuentosText">Descuentos</string>
    <string name="crear">Crear</string>
    <string name="cancelar">Cancelar</string>
    <string name="carrito">Carrito</string>
    <string name="total">Total</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="cantidadInicial">0</string>
    <string name="favorito">Favorito</string>
    <string name="precioCarrito">Precio: $120.500</string>
    <string name="cantidadProductoCarrito">3</string>
    <string name="cantidadProductoCarritoLabel">Cantidad: </string>
    <string name="subtotalProductoCarrito">$262.000</string>
    <string name="comprarCarrito">Comprar</string>
    <string name="totalCarrito">Total: $0.0</string>
    <string name="pedidos">Pedidos</string>
    <string name="admin">Admin</string>
    <string name="administracion">Administración</string>
    <string name="cantidadProducto">0</string>
    <string name="precioLabel">Precio: </string>
    <string name="subTotalLabel">Subtotal: </string>
    <string name="simboloPesos">$</string>
    <string name="totalLabel">Total: </string>
    <string name="noHayProductos">No hay Productos </string>

    <string name="id">ID</string>
    <string name="estadoPedido">Estado Pedido</string>
    <string name="fecha">Fecha</string>
    <string name="monto">Monto</string>

    <string name="idPedidoEj">121</string>
    <string name="estadoPedidoEj">Enviado</string>
    <string name="fechaPedidoEj">11-03-2025</string>

    <string name="rol">Rol</string>
    <string name="estado">Estado</string>

    <string name="nombreUsuarioEJ">Juan</string>
    <string name="rolUsuarioEJ">Admin</string>
    <string name="estadoUsuarioEJ">Activo</string>

    <string name="editarPerfil">Editar Perfil</string>
    <string name="correoElectronica">Correo Electrónico</string>
    <string name="numeroTelefono">Número de Teléfono</string>
    <string name="apellido">Apellido</string>

    <string name="cliente">Cliente</string>
    <string name="metodoPago">Método de pago</string>
    <string name="pse">PSE</string>

    <string name="nombre_app">Vent Ford</string>
    <string name="sloganSplash">Descubre la esencia</string>
    <string name="sloganpart2">de lujo</string>
    <string name="imglogo">imglogo</string>
    <string name="studios">studios</string>
    <string name="textiniciosesion">¡Bienvenido de nuevo!</string>
    <string name="textinicio">Iniciar Sesión</string>
    <string name="btngoogleinicio">Iniciar sesión con google</string>
    <string name="resgistrarinicio">¿No tienes cuenta?</string>
    <string name="text2registro">Regístrate</string>
    <string name="hintiniciarsesion">Introduzca su correo</string>
    <string name="hintnombre">Introduzca su nombre</string>
    <string name="hintapellido">Introduzca su apellido</string>
    <string name="contrasenainicio">Introduzca su contraseña</string>
    <string name="productosMenu">Productos</string>
    <string name="categoriaMenu">Categorias</string>
    <string name="favoritosMenu">Favoritos</string>
    <string name="OfertasMenu">Ofertas</string>
    <string name="Micuenta">Mi cuenta</string>
    <string name="CerrarSesion">Cerrar sesion</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar\n</string>
    <string name="menosbtn">-</string>
    <string name="btnmenos">-</string>
    <string name="btnmas">+</string>
    <string name="productos_title">Productos</string>
    <string name="favoritostitle">Favoritos</string>
    <string name="cantidad_text">cantidad</string>
    <string name="cantidadinicial">0</string>
    <string name="textfav">favorito</string>
    <string name="cantidadstock">100</string>
    <string name="unds">disponibles</string>
    <string name="cantidadtext">cantidad</string>
    <string name="preciotext">Precio:</string>
    <string name="titletiendas">Tiendas cercanas</string>
    <string name="sede_principal">Sede principal</string>
    <string name="carrera_5b_este_25h_46">carrera 5b este # 25h 46</string>
    <string name="horario">9:00 am - 6: 00 pm</string>
    <string name="sede2">Sede- Aromas</string>
    <string name="direccion2">Carrera 13a #32-c15</string>
    <string name="nombretitle">Nombre</string>
    <string name="apellidotitle">Apellido</string>
    <string name="registrotitle">Registro</string>
    <string name="hintCorreo">Introduzca su correo</string>
    <string name="correotitle">Correo</string>
    <string name="passwordtitle">Contraseña</string>
    <string name="hintPassword">introduzca su contraseña</string>
    <string name="passwordtitle2">Confirme la contraseña</string>
    <string name="registrase_btn">Registrase</string>
    <string name="TyC_regitro">Acepto terminos y condiciones</string>
    <string name="telefonotitle">Telefono</string>
    <string name="hintTelefono">Introduzca su telefono</string>
    <string name="Tiendas">Tiendas</string>
    <string name="perfilTitle">Perfil</string>
    <string name="btneditinfo">Editar Informacion</string>
    <string name="btnsave">Guardar Información</string>
    <string name="titleRecuperar">Recuperar contraseña</string>
    <string name="textRecuperar">Indique el correo electronico asociado a su cuenta, se le enviara un email con las instrucciones para restablecer su contraseña</string>
    <string name="labelcorreoRecu">introduzca su correo electronico</string>
    <string name="btnrecuperar">Recuperar Contrasela</string>
    <string name="LinkRecuperarContra">Olvidé mi contraseña</string>

    <string name="ubicacion_tienda_1">Tienda Aroma frescos</string>
    <string name="ubicacion_tienda_2">Tienda Olores citricos</string>
    <string name="registrotitleGoogle">Terminar resgitro \n- Google</string>
    <string name="inicioMenu">Inicio</string>
</resources>