<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
       android:checkableBehavior="single">
        <item android:id="@+id/productosFragment"
            android:title="@string/productosMenu"
            style="@themes/MyNavigationViewStyle"/>

    <item android:id="@+id/categoriasFragment"
        android:title="@string/categoriaMenu"/>

    <item android:id="@+id/favoritosFragment"
        android:title="@string/favoritosMenu"/>

        <item android:id="@+id/OfertasFragment"
            android:title="@string/OfertasMenu"/>
        </group>
    <item android:title=" ">
        <menu>
            <item android:id="@+id/MiPerfilFragment"
            android:title="@string/Micuenta"/>

            <item
            android:id="@+id/CerrarSesion"
            android:title="@string/CerrarSesion"/>
        </menu>
    </item>
</menu>