<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro">

    <LinearLayout
        android:id="@+id/linearLayourHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_gestionPedidosTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/pedidos"
            android:textAlignment="textStart"
            android:textColor="@color/blanco"
            android:textSize="30sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:padding="10dp"
            android:background="@color/negro">

            <TableRow>

                <TextView
                    android:id="@+id/tv_tituloIDGestionPe"
                    android:fontFamily="@font/libre_baskerville_bold"
                    android:padding="8dp"
                    android:text="@string/id"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_tituloEstadoPeGestionPe"
                    android:fontFamily="@font/libre_baskerville_bold"
                    android:padding="8dp"
                    android:text="@string/estadoPedido"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_tituloFechaGestionPe"
                    android:fontFamily="@font/libre_baskerville_bold"
                    android:padding="8dp"
                    android:text="@string/fecha"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_tituloMontoGestionPe"
                    android:fontFamily="@font/libre_baskerville_bold"
                    android:padding="8dp"
                    android:text="@string/monto"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/blanco"
                android:layout_marginVertical="4dp" />

            <TableRow>

                <TextView
                    android:id="@+id/tv_idPrimerGestionPedi"
                    android:fontFamily="@font/libre_baskerville_bold"
                    android:padding="8dp"
                    android:text="@string/idPedidoEj"
                    android:textAlignment="center"
                    android:textColor="@color/dorado"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_estadoPrimerGestionPedi"
                    android:fontFamily="@font/libre_baskerville_bold"
                    android:padding="8dp"
                    android:text="@string/estadoPedidoEj"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_fechaPrimerGestionPedi"
                    android:fontFamily="@font/libre_baskerville_bold"
                    android:padding="8dp"
                    android:text="@string/fechaPedidoEj"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_montoPrimerGestionPedi"
                    android:fontFamily="@font/libre_baskerville_bold"
                    android:padding="8dp"
                    android:text="@string/precioProducto"
                    android:textAlignment="center"
                    android:textColor="@color/blanco"
                    android:textSize="15sp" />
            </TableRow>



        </TableLayout>


    </LinearLayout>
</ScrollView>