<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/degradadoFondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editarPerfil"
            android:textSize="30sp"
            android:gravity="center"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco"
            android:layout_gravity="center"/>

        <ImageView

            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            app:srcCompat="@drawable/foto_perfil" />

        <!--editar foto-->
        <!--nombres-->

        <TextView
            android:id="@+id/nombreslabel_edit"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:textStyle="bold"
            android:id="@+id/nombreuser_edit"
            style="@style/Edittex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombretitle"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco"
            android:layout_marginBottom="10dp"/>

        <!--apellidos-->
        <TextView
            android:id="@+id/apellidoslabel_edit"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellido"
            android:textSize="20sp"
            android:layout_marginStart="10sp"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:textStyle="bold"
            android:id="@+id/apellidouser_edit"
            style="@style/Edittex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellidotitle"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco"
            android:layout_marginBottom="10dp"/>

        <!--correo-->
        <TextView
            android:id="@+id/correolabel_edit"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correoElectronica"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/correouser_edit"
            style="@style/Edittex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correotitle"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco"
            android:layout_marginBottom="10dp"/>
        <!--telefono-->

        <TextView
            android:id="@+id/telefonolabel_edit"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numeroTelefono"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/telefonouser_edit"
            style="@style/Edittex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefonotitle"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco" />

        <TextView
            android:id="@+id/telefonolabel_editt"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rol"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/telefonouser_edit"
            style="@style/Edittex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefonotitle"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco" />

        <TextView
            android:id="@+id/telefonolabel_editt"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/telefonouser_edit"
            style="@style/Edittex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefonotitle"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:fontFamily="@font/playfair_display_bold"
            android:textColor="@color/blanco" />

        <Button
            android:id="@+id/btnsave_edit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            app:backgroundTint="@color/negro"
            android:textColor="@color/dorado"
            android:fontFamily="@font/playfair_display_bold"
            />
    </LinearLayout>
</ScrollView>