<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fondo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:id="@+id/layoutcentrar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/imginicio"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textiniciosesion"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/textiniciosesion"
        android:textSize="30sp"
        android:fontFamily="@font/playfair_display_bold"
        android:textColor="@color/blanco"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>

    <EditText
        style="@style/Edittex"
        android:id="@+id/correo"
        android:layout_width="285sp"
        android:layout_height="50sp"
        android:textColorHint="@color/blanco"
        android:hint="@string/hintiniciarsesion"
        android:textSize="20sp"
        android:layout_marginVertical="15sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

    <EditText
        style="@style/Edittex"
        android:id="@+id/contrasena"
        android:layout_width="285sp"
        android:layout_height="50sp"
        android:layout_marginTop="10sp"
        android:hint="@string/contrasenainicio"
        android:textSize="20sp"
        android:layout_marginVertical="15sp"
        android:textColorHint="@color/blanco"
        android:paddingHorizontal="10sp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:autofillHints="password" />


    <TextView
        android:id="@+id/Olvidemicontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="Olvidé mi contraseña"
        android:textSize="30sp"
        android:fontFamily="@font/playfair_display_bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/blanco"/>

    <Button
        android:id="@+id/btniniciarsesion"
        style="@style/Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textinicio"
        android:textSize="20sp"
        android:layout_marginVertical="15dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/playfair_display_bold"
        app:backgroundTint="@null"/>

    <Button
        android:id="@+id/btngoogle"
        style="@style/Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btngoogleinicio"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/playfair_display_bold"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:icon="@drawable/google"
        app:iconSize="30dp"
        app:iconTint="@null"/>
    <TextView
        android:id="@+id/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resgistrarinicio"
        android:textSize="20sp"
        android:fontFamily="@font/playfair_display_bold"
        android:textColor="@color/blanco"
        android:layout_marginVertical="10sp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/texts2registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2registro"
        android:textSize="20sp"
        android:fontFamily="@font/playfair_display_bold"
        android:textColor="@color/burdeos"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>